# excel_parser

./: .env  Cargo.toml  readme.md  result..json  result.json
argument_parser/: Cargo.toml  command_config.yml
argument_parser/src/: command_from_builder.rs  command_from_parser.rs  lib.rs
argument_parser/src/command_reader/: mod.rs
argument_parser/tests/: TestLib.rs
demo/: Cargo.toml  result.json  test.xlsx
demo/src/: main.rs
demo/template/: template.json
entry_star/: Cargo.toml
excel_parser/: Cargo.toml
excel_parser/src/: lib.rs
excel_parser/src/output/: mod.rs  regex.rs
excel_parser/src/template/: excel.rs  json_template.rs  mod.rs  template_trait.rs
excel_parser/src/template/model/: array_model.rs  json_template.rs  mod.rs  object_model.rs  root_model.rs
src/: main.rs
src/template/: excel.rs  json_template.rs  mod.rs  template_trait.rs
