[workspace]
members = ["excel_parser", "entry_star", "argument_parser"]
resolver = "1"

[workspace.package]
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace.dependencies]
calamine = "0.26.1"
chrono = "0.4.40"
dotenv = "0.15.0"
jsonpath = "0.1.1"
regex = "1.11.1"
serde = { version = "1.0.219" , features = ["derive"] }
serde_yml = "0.0.12"
serde_json = "1.0.140"
thiserror = "2.0.12"
clap = "4.5.34"