[package]
name = "argument_parser"
version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
default=[]
command_from_builder = []


[dependencies]
dotenv.workspace = true
serde.workspace = true
clap = { features = ["derive","string"], workspace = true }
