[package]
name = "entry_star"
version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv.workspace = true
excel_parser = {path = "../excel_parser"}
argument_parser = {path = "../argument_parser"}
serde_json.workspace = true
serde.workspace = true
serde_yml.workspace = true

[[bin]]
name = "parser_star"

[[bin]]
name = "argument_star"


